fix letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 body{
     background-image: linear-gradient(hsl(0, 0%, 100%),hsl(0, 100%, 98%));
-    background-size: cover;
+    background-size: contain;
     font-size: 16px;
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
@@ -22,6 +22,7 @@ body{
 h1{
     color: var(--dark-grayish-red);
     font-weight: 300;
+    letter-spacing: 10px;
 }
 form input::placeholder{
     color: var(--desaturated-red);
